#27423 fix bug derived from the new url attribute moved to dot-service yml file